--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <title>Document</title>
 </head>
 <body>
+    <p>This is a new paragraph added to create a difference between branches.</p>
 </body>
 </html>
