--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Hello, world!</p>
     <p>This is a new paragraph added to create a difference between branches.</p>
 </body>
 </html>
