Added quotes and header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello, world!</p>
-    <p>This is a new paragraph added to create a difference between branches.</p>
+    <h1>My Favorite Quote</h1>
+    <blockquote>
+        "The only limit to our realization of tomorrow is our doubts of today."
+        <footer>- Franklin D. Roosevelt</footer>
+    </blockquote>
 </body>
 </html>
