Added basic styles and linked style.css in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Favorite Quote</h1>
     <blockquote>
         "The only limit to our realization of tomorrow is our doubts of today."
-        <footer>- Franklin D. Roosevelt</footer>
+        <footer>- CHYNNA LEE DEVOPS COURSE</footer>
     </blockquote>
 </body>
 </html>
